--- a/index.html
+++ b/index.html
@@ -76,24 +76,21 @@
             </picture>
         </section>
         <section class="numeroros">
-            <div class="estatisticas">
+            <div>
                 <section>
                     <img src="images/icones/index/estrela.svg" alt="">
                     <h3 class="titles">Nota 4.9</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>A Nexus possui uma das melhores nota do mercado em ensino efetivo e correto de programação, abrindo a mente dos alunos!</p>
                 </section>
                 <section>
                     <img src="images/icones/index/tela_video.svg" alt="">
                     <h3 class="titles">+1Mil aulas</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>A plataforma da Nexus, possui mais de mil aulas focadas em tornar os nossos alunos os melhores programadores do mercado.</p>
                 </section>
                 <section>
                     <img src="images/icones/index/usuarios.svg" alt="">
                     <h3 class="titles">+1.500 alunos</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>Temos mais de mil e quinhentos alunos que fizeram os nossos cursos e hoje atuam no mercado de trabalho, nacional e extrangeiro.</p>
                 </section>
             </div>
         </section>
@@ -126,10 +123,10 @@
             <swiper-slide>
                 <section class="card card1">
                     <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Programação Funcional</h3>
                     <div class="perfilProf">
-                        <img src="" alt="">
+                        <img src="images/professores/prof1.png" alt="">
                         <div>
                             <p class="name">Nome Sobrenome</p>
                             <p class="atuacao">Área de atuação</p>
@@ -138,12 +135,12 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                <section class="card card2">
+                    <div class="imagem curso2"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Chatbots com IA</h3>
                     <div class="perfilProf">
-                        <img src="" alt="">
+                        <img src="images/professores/prof2.png" alt="">
                         <div>
                             <p class="name">Nome Sobrenome</p>
                             <p class="atuacao">Área de atuação</p>
@@ -152,12 +149,12 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                <section class="card card3">
+                    <div class="imagem curso3"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Desenvolvimento Mobile com Flutter</h3>
                     <div class="perfilProf">
-                        <img src="" alt="">
+                        <img src="images/professores/prof3.png" alt="">
                         <div>
                             <p class="name">Nome Sobrenome</p>
                             <p class="atuacao">Área de atuação</p>
@@ -166,12 +163,12 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
+                <section class="card card4">
+                    <div class="imagem curso4"></div>
                     <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                    <h3>POO com Java</h3>
                     <div class="perfilProf">
-                        <img src="" alt="">
+                        <img src="images/professores/prof4.png" alt="">
                         <div>
                             <p class="name">Nome Sobrenome</p>
                             <p class="atuacao">Área de atuação</p>
@@ -180,12 +177,12 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                <section class="card card5">
+                    <div class="imagem curso5"></div>
+                    <p>AVANÇADO</p>
+                    <h3>Blockchain e Criptografia</h3>
                     <div class="perfilProf">
-                        <img src="" alt="">
+                        <img src="images/professores/prof5.png" alt="">
                         <div>
                             <p class="name">Nome Sobrenome</p>
                             <p class="atuacao">Área de atuação</p>
@@ -194,12 +191,12 @@
                 </section>
             </swiper-slide>
             <swiper-slide>
-                <section class="card card1 ">
-                    <div class="imagem curso1"></div>
-                    <p>INICIANTE</p>
-                    <h3>Lógica de Programação</h3>
+                <section class="card card6 ">
+                    <div class="imagem curso6"></div>
+                    <p>AVANÇADO</p>
+                    <h3>APIs RESTful com Python</h3>
                     <div class="perfilProf">
-                        <img src="" alt="">
+                        <img src="images/professores/prof6.png" alt="">
                         <div>
                             <p class="name">Nome Sobrenome</p>
                             <p class="atuacao">Área de atuação</p>
@@ -209,25 +206,21 @@
             </swiper-slide>
         </swiper-container>
 
-        
-
         <section class=" container linguagens">
-            <p class="intro">Linguagens usadas</p>
-            <h2 class="intro">Aqui você aprende</h2>
+            <h2 class="intro">Linguagens usadas</h2>
+            <p class="intro">Aqui você aprende</p>
             <section class="linguagem intro">
                 <img src="images/icones/index/java.svg" alt="Logo da linguagem de programação java na cor branca">
                 <div>
                     <h3>Java</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>Java é uma linguagem de programação orientada a objetos amplamente utilizada no desenvolvimento de aplicações para web, dispositivos móveis e sistemas corporativos.</p>
                 </div>
             </section>
             <section class="linguagem intro">
                 <img src="images/icones/index/reactjs.svg" alt="Logo do framework react.js na cor branca">
                 <div>
                     <h3>React.js</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>React é uma das bibliotecas de JS mais procuradas no desenvolvimento web moderno, utilizada por empresas para criar interfaces de usuário dinâmicas e eficientes.</p>
                 </div>
             </section>
             <section class="linguagem intro">
@@ -235,16 +228,14 @@
                     alt="Logo da linguagem de programação JavaScript na cor branca">
                 <div>
                     <h3>HTML + CSS + JS</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>HTML, CSS e JavaScript formam a base de toda a web moderna.Dominar esse trio é fundamental para quem quer construir sites profissionais e aplicações web atrativas.</p>
                 </div>
             </section>
             <section class="linguagem intro">
                 <img src="images/icones/index/python.svg" alt="Logo da linguagem de programação python na cor branca">
                 <div>
                     <h3>Python</h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum is simply
-                        dummy text of the printing.</p>
+                    <p>Python é uma das linguagens de programação mais fáceis de aprender, amplamente utilizada em desenvolvimento web, automação e inteligência artificial.</p>
                 </div>
             </section>
         </section>
