--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                     seus objetivos na área de tecnologia. Explore nossos cursos e descubra como podemos apoiar sua
                     jornada no desenvolvimento de software!
                 </p>
-                <a href="#" class="button">Primeiro Botão</a>
+                <a href="#nossoNum" class="button">Conheça-nos melhor</a>
             </div>
             <picture>
                 <source media="(min-width: 1000px )" srcset="images/logonexus.png">
                 <img src="" alt="logo da nexux">
             </picture>
         </section>
-        <section class="numeroros">
+        <section class="numeroros" id="nossoNum">
             <div>
                 <section>
                     <img src="images/icones/index/estrela.svg" alt="">
@@ -114,12 +114,188 @@
                     no setor. Na Nexus, acreditamos que investir no aprendizado é essencial para enfrentar os desafios
                     do mercado tecnológico e alcançar o sucesso na carreira de desenvolvimento de software.
                 </p>
-                <a href="#" class="button intro">Primeiro Botão</a>
+                <a href="cursos.html" class="button intro">Ver nosso cursos</a>
             </div>
         </section>
 
-        <swiper-container class="mySwiper intro to-hide" id="cardsCursos" pagination="true" pagination-clickable="true"
+        <swiper-container class="mySwiper intro cardsCursos" id="slide-descktop" pagination="true" pagination-clickable="true"
             space-between="30" slides-per-view="3">
+            <swiper-slide>
+                <section class="card card1">
+                    <div class="imagem curso1"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Programação Funcional</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof1.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card2">
+                    <div class="imagem curso2"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Chatbots com IA</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof2.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card3">
+                    <div class="imagem curso3"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Desenvolvimento Mobile com Flutter</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof3.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card4">
+                    <div class="imagem curso4"></div>
+                    <p>INICIANTE</p>
+                    <h3>POO com Java</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof4.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card5">
+                    <div class="imagem curso5"></div>
+                    <p>AVANÇADO</p>
+                    <h3>Blockchain e Criptografia</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof5.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card6 ">
+                    <div class="imagem curso6"></div>
+                    <p>AVANÇADO</p>
+                    <h3>APIs RESTful com Python</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof6.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+        </swiper-container>
+
+        <swiper-container class="mySwiper intro cardsCursos" id="slide-tablet" pagination="true" pagination-clickable="true"
+            space-between="30" slides-per-view="2">
+            <swiper-slide>
+                <section class="card card1">
+                    <div class="imagem curso1"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Programação Funcional</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof1.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card2">
+                    <div class="imagem curso2"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Chatbots com IA</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof2.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card3">
+                    <div class="imagem curso3"></div>
+                    <p>INTERMEDIÁRIO</p>
+                    <h3>Desenvolvimento Mobile com Flutter</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof3.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card4">
+                    <div class="imagem curso4"></div>
+                    <p>INICIANTE</p>
+                    <h3>POO com Java</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof4.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card5">
+                    <div class="imagem curso5"></div>
+                    <p>AVANÇADO</p>
+                    <h3>Blockchain e Criptografia</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof5.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+            <swiper-slide>
+                <section class="card card6 ">
+                    <div class="imagem curso6"></div>
+                    <p>AVANÇADO</p>
+                    <h3>APIs RESTful com Python</h3>
+                    <div class="perfilProf">
+                        <img src="images/professores/prof6.png" alt="">
+                        <div>
+                            <p class="name">Nome Sobrenome</p>
+                            <p class="atuacao">Área de atuação</p>
+                        </div>
+                    </div>
+                </section>
+            </swiper-slide>
+        </swiper-container>
+
+        <swiper-container class="mySwiper intro cardsCursos" id="slide-mobile" pagination="true" pagination-clickable="true"
+            space-between="30" slides-per-view="1">
             <swiper-slide>
                 <section class="card card1">
                     <div class="imagem curso1"></div>
