--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 <a href="#nossoNum" class="button">Conheça-nos melhor</a>
             </div>
             <picture>
-                <source media="(min-width: 1000px )" srcset="images/logonexus.png">
-                <img src="" alt="logo da nexux">
+                <img src="images/logonexus.png" alt="logo da nexux">
             </picture>
         </section>
         <section class="numeroros" id="nossoNum">
