--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
         </section>
 
-        <swiper-container class="mySwiper intro cardsCursos" id="slide-descktop" pagination="true" pagination-clickable="true"
+        <swiper-container class="mySwiper intro cardsCursos" id="slide-desktop" pagination="true" pagination-clickable="true"
             space-between="30" slides-per-view="3">
             <swiper-slide>
                 <section class="card card1">
