--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         </section>
         <section id="quemSomos" class="container">
             <picture class="intro">
-                <source media="(min-width: 1000px )" srcset="images/imagensSobrepostas.png">
-                <img src="" alt="imagem sobreposta">
+                <source media="(min-width: 1151px )" srcset="images/imagensSobrepostas.png">
+                <img src="images/imagensSobrepostas2.png" alt="imagem sobreposta">
             </picture>
             <div>
                 <h2 class="intro">Quem <span>somos?</span></h2>
@@ -107,6 +107,9 @@
                     e treinamentos projetados para atender às necessidades de desenvolvedores em todos os níveis, desde
                     iniciantes até especialistas.
                 </p>
+                <figure>
+                    <img src="images/imagensSobrepostas2.png" alt="">
+                </figure>
                 <p class="intro">
                     Nosso compromisso é com a excelência na formação técnica e no desenvolvimento contínuo, utilizando
                     recursos atualizados e abordagens práticas para garantir que nossos alunos estejam sempre à frente
