--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main>
         <section data-aos="zoom-in-down" id="bemVindo" class="container">
             <div>
-                <h2>Bem-vindo a N<span>exus!</span></h2>
+                <h2>Bem-vindo à N<span>exus!</span></h2>
                 <div class="lineBottom"></div>
                 <p>
                     Bem-vindo ao Nexus! Estamos empolgados em ter você aqui. No Nexus, oferecemos aulas de alta
